tempfile/auto_impl/tests/compile-fail/mut_self_for_rc.rs
use auto_impl::auto_impl;


#[auto_impl(Rc)]
trait Foo {
    fn foo(&mut self);
}


fn main() {}
